tests/baselines/reference/parserParameterList4.errors.txt
==== tests/cases/compiler/parserParameterList4.ts (1 errors) ====
    function F(public A) {
               ~~~~~~
!!! parserParameterList4.ts(1,12): error TS2246: A parameter property is only allowed in a constructor implementation.
    }